--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "server.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "nodemon --ignore 'sessions/' server.js"
+		"start": "node server.js",
+		"dev": "nodemon --ignore 'sessions/' server.js"
 	},
 	"author": "",
 	"license": "ISC",
